@@ -4,28 +4,25 @@ import com.accbdd.complicated_bees.bees.Product;
 import com.accbdd.complicated_bees.recipe.CentrifugeRecipe;
 import com.accbdd.complicated_bees.registry.EsotericRegistration;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.Direction;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.Tag;
-import net.minecraft.world.Container;
 import net.minecraft.world.inventory.ContainerData;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.level.block.entity.BlockEntity;
 import net.minecraft.world.level.block.entity.BlockEntityType;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraftforge.common.capabilities.Capability;
-import net.minecraftforge.common.capabilities.ForgeCapabilities;
-import net.minecraftforge.common.util.LazyOptional;
-import net.minecraftforge.energy.EnergyStorage;
-import net.minecraftforge.energy.IEnergyStorage;
-import net.minecraftforge.items.ItemHandlerHelper;
-import net.minecraftforge.items.ItemStackHandler;
-import net.minecraftforge.items.wrapper.RecipeWrapper;
-import org.jetbrains.annotations.NotNull;
+import net.neoforged.neoforge.energy.EnergyStorage;
+import net.neoforged.neoforge.energy.IEnergyStorage;
+import net.neoforged.neoforge.items.ItemHandlerHelper;
+import net.neoforged.neoforge.items.ItemStackHandler;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
@@ -48,7 +45,7 @@ public abstract class AbstractCentrifugeBlockEntity extends BlockEntity implemen
 
     private final ContainerData data;
 
-    private final RecipeManager.CachedCheck<Container, CentrifugeRecipe> quickCheck;
+    private final RecipeManager.CachedCheck<RecipeInput, CentrifugeRecipe> quickCheck;
 
     private int progress;
     private int maxProgress;
@@ -91,54 +88,34 @@ public abstract class AbstractCentrifugeBlockEntity extends BlockEntity implemen
     }
 
     @Override
-    public void invalidateCaps() {
-        super.invalidateCaps();
-        getItemHandler().invalidate();
-        getInputItemHandler().invalidate();
-        getOutputItemHandler().invalidate();
-        getUpgradeItemHandler().invalidate();
-        getEnergyHandler().invalidate();
-    }
-
-    @Override
-    public @NotNull <T> LazyOptional<T> getCapability(@NotNull Capability<T> cap, @Nullable Direction side) {
-        if (cap == ForgeCapabilities.ITEM_HANDLER) {
-            return this.getItemHandler().cast();
-        }
-        if (cap == ForgeCapabilities.ENERGY)
-            return this.getEnergyHandler().cast();
-        return super.getCapability(cap, side);
-    }
-
-    @Override
-    protected void saveAdditional(CompoundTag tag) {
-        super.saveAdditional(tag);
-        tag.put(ITEMS_INPUT_TAG, inputItems.serializeNBT());
-        tag.put(ITEMS_OUTPUT_TAG, outputItems.serializeNBT());
-        tag.put(ITEMS_UPGRADE_TAG, upgradeItems.serializeNBT());
+    protected void saveAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+        super.saveAdditional(tag, registries);
+        tag.put(ITEMS_INPUT_TAG, inputItems.serializeNBT(registries));
+        tag.put(ITEMS_OUTPUT_TAG, outputItems.serializeNBT(registries));
+        tag.put(ITEMS_UPGRADE_TAG, upgradeItems.serializeNBT(registries));
         ListTag bufferTag = new ListTag();
         for (ItemStack stack : outputBuffer) {
-            bufferTag.add(stack.save(new CompoundTag()));
+            bufferTag.add(stack.save(registries));
         }
         tag.put(OUTPUT_BUFFER_TAG, bufferTag);
     }
 
     @Override
-    public void load(CompoundTag tag) {
-        super.load(tag);
+    public void loadAdditional(CompoundTag tag, HolderLookup.Provider registries) {
+        super.loadAdditional(tag, registries);
         if (tag.contains(ITEMS_INPUT_TAG)) {
-            inputItems.deserializeNBT(tag.getCompound(ITEMS_INPUT_TAG));
+            inputItems.deserializeNBT(registries, tag.getCompound(ITEMS_INPUT_TAG));
         }
         if (tag.contains(ITEMS_OUTPUT_TAG)) {
-            outputItems.deserializeNBT(tag.getCompound(ITEMS_OUTPUT_TAG));
+            outputItems.deserializeNBT(registries, tag.getCompound(ITEMS_OUTPUT_TAG));
         }
         if (tag.contains(OUTPUT_BUFFER_TAG)) {
             for (Tag itemCompound : tag.getList(OUTPUT_BUFFER_TAG, Tag.TAG_COMPOUND)) {
-                outputBuffer.add(ItemStack.of((CompoundTag) itemCompound));
+                outputBuffer.add(ItemStack.parseOptional(registries, (CompoundTag) itemCompound));
             }
         }
         if (tag.contains(ITEMS_UPGRADE_TAG)) {
-            upgradeItems.deserializeNBT(tag.getCompound(ITEMS_UPGRADE_TAG));
+            upgradeItems.deserializeNBT(registries, tag.getCompound(ITEMS_UPGRADE_TAG));
         }
     }
 
@@ -194,8 +171,8 @@ public abstract class AbstractCentrifugeBlockEntity extends BlockEntity implemen
 
     @Nullable
     public CentrifugeRecipe getRecipe(ItemStack stack) {
-        Optional<CentrifugeRecipe> recipeCheck = quickCheck.getRecipeFor(getWrapper(stack), getLevel());
-        return recipeCheck.orElse(null);
+        Optional<RecipeHolder<CentrifugeRecipe>> recipeCheck = quickCheck.getRecipeFor(getWrapper(stack), getLevel());
+        return recipeCheck.isPresent() ? recipeCheck.get().value() : null;
     }
 
     /**
@@ -205,7 +182,7 @@ public abstract class AbstractCentrifugeBlockEntity extends BlockEntity implemen
         CentrifugeRecipe recipe = getRecipe(stack);
         if (recipe == null)
             return;
-        List<Product> products = getRecipe(stack).getOutputs();
+        List<Product> products = getRecipe(stack).outputs();
         stack.shrink(1);
 
         for (Product product : products) {
@@ -222,8 +199,8 @@ public abstract class AbstractCentrifugeBlockEntity extends BlockEntity implemen
         if (recipe == null)
             return true;
         ItemStack primary = ItemStack.EMPTY;
-        if (!recipe.getOutputs().isEmpty()) {
-            primary = recipe.getOutputs().get(0).getStack();
+        if (!recipe.outputs().isEmpty()) {
+            primary = recipe.outputs().getFirst().getStack();
         }
         boolean canInsert = false;
         int stackCount = primary.getCount();
