@@ -6,21 +6,23 @@ import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.Container;
 import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeManager;
+import net.neoforged.neoforge.items.wrapper.InvWrapper;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 
 import static com.accbdd.complicated_bees.ComplicatedBees.MODID;
 
 public class MellariumMutatorScreen extends AbstractContainerScreen<MellariumMutatorMenu> {
     private final ResourceLocation GUI;
-    private final RecipeManager.CachedCheck<Container, MutatorRecipe> recipeCheck = RecipeManager.createCheck(EsotericRegistration.MUTATOR_RECIPE.get());
+    private final RecipeManager.CachedCheck<RecipeInput, MutatorRecipe> recipeCheck = RecipeManager.createCheck(EsotericRegistration.MUTATOR_RECIPE.get());
 
     public MellariumMutatorScreen(MellariumMutatorMenu menu, Inventory inventory, Component title) {
         super(menu, inventory, title);
-        this.GUI = new ResourceLocation(MODID, "textures/gui/mellarium_mutator.png");
+        this.GUI = ResourceLocation.fromNamespaceAndPath(MODID, "textures/gui/mellarium_mutator.png");
         this.imageHeight = 161;
         this.imageWidth = 176;
         this.inventoryLabelY = imageHeight - 93;
@@ -28,7 +30,6 @@ public class MellariumMutatorScreen extends AbstractContainerScreen<MellariumMut
 
     @Override
     protected void renderBg(GuiGraphics graphics, float partialTicks, int mouseX, int mouseY) {
-        renderBackground(graphics);
         int relX = (this.width - this.imageWidth) / 2;
         int relY = (this.height - this.imageHeight) / 2;
         graphics.blit(GUI, relX, relY, 0, 0, this.imageWidth, this.imageHeight);
@@ -43,12 +44,12 @@ public class MellariumMutatorScreen extends AbstractContainerScreen<MellariumMut
     @Override
     public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTick) {
         super.render(graphics, mouseX, mouseY, partialTick);
-        ItemStack stack = getMenu().getItems().get(0);
-        recipeCheck.getRecipeFor(new SimpleContainer(stack), getMenu().getLevel()).ifPresent(recipe -> {
+        ItemStack stack = getMenu().getItems().getFirst();
+        recipeCheck.getRecipeFor(new RecipeWrapper(new InvWrapper(new SimpleContainer(stack))), getMenu().getLevel()).ifPresent(recipe -> {
             graphics.blit(GUI, leftPos+84, topPos+26, 176, 0, 8, 8);
             if (mouseX > leftPos+83 && mouseX < leftPos+83+10 && mouseY > topPos+25 && mouseY < topPos+25+10) {
                 graphics.renderTooltip(this.font,
-                        Component.translatable("jei.complicated_bees.modifier", recipe.getMutationModifier() + "x"),
+                        Component.translatable("jei.complicated_bees.modifier", recipe.value().mutationModifier() + "x"),
                         mouseX,
                         mouseY);
             }
