@@ -6,11 +6,13 @@ import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.screens.inventory.AbstractContainerScreen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.Container;
 import net.minecraft.world.SimpleContainer;
 import net.minecraft.world.entity.player.Inventory;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeManager;
+import net.neoforged.neoforge.items.wrapper.InvWrapper;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 
 import java.util.List;
 import java.util.Optional;
@@ -19,11 +21,11 @@ import static com.accbdd.complicated_bees.ComplicatedBees.MODID;
 
 public class MellariumTempUnitScreen extends AbstractContainerScreen<MellariumTempUnitMenu> {
     private final ResourceLocation GUI;
-    private final RecipeManager.CachedCheck<Container, TempUnitRecipe> recipeCheck = RecipeManager.createCheck(EsotericRegistration.TEMP_UNIT_RECIPE.get());
+    private final RecipeManager.CachedCheck<RecipeInput, TempUnitRecipe> recipeCheck = RecipeManager.createCheck(EsotericRegistration.TEMP_UNIT_RECIPE.get());
 
     public MellariumTempUnitScreen(MellariumTempUnitMenu menu, Inventory inventory, Component title) {
         super(menu, inventory, title);
-        this.GUI = new ResourceLocation(MODID, "textures/gui/mellarium_temp_unit.png");
+        this.GUI = ResourceLocation.fromNamespaceAndPath(MODID, "textures/gui/mellarium_temp_unit.png");
         this.imageHeight = 161;
         this.imageWidth = 176;
         this.inventoryLabelY = imageHeight - 93;
@@ -37,7 +39,6 @@ public class MellariumTempUnitScreen extends AbstractContainerScreen<MellariumTe
 
     @Override
     protected void renderBg(GuiGraphics graphics, float partialTicks, int mouseX, int mouseY) {
-        renderBackground(graphics);
         int relX = (this.width - this.imageWidth) / 2;
         int relY = (this.height - this.imageHeight) / 2;
         graphics.blit(GUI, relX, relY, 0, 0, this.imageWidth, this.imageHeight);
@@ -46,9 +47,9 @@ public class MellariumTempUnitScreen extends AbstractContainerScreen<MellariumTe
     @Override
     public void render(GuiGraphics graphics, int mouseX, int mouseY, float partialTick) {
         super.render(graphics, mouseX, mouseY, partialTick);
-        ItemStack stack = getMenu().getItems().get(0);
-        recipeCheck.getRecipeFor(new SimpleContainer(stack), getMenu().getLevel()).ifPresent(recipe -> {
-            switch (recipe.getTempChange()) {
+        ItemStack stack = getMenu().getItems().getFirst();
+        recipeCheck.getRecipeFor(new RecipeWrapper(new InvWrapper(new SimpleContainer(stack))), getMenu().getLevel()).ifPresent(recipe -> {
+            switch (recipe.value().tempChange()) {
                 case DOWN_1 -> drawThermometer(graphics, 0, 0);
                 case DOWN_2 -> drawThermometer(graphics, 8, 0);
                 case DOWN_3, DOWN_4, DOWN_5 -> drawThermometer(graphics, 16, 0);
@@ -59,8 +60,8 @@ public class MellariumTempUnitScreen extends AbstractContainerScreen<MellariumTe
             if (mouseX > leftPos+84 && mouseX < leftPos+84+8 && mouseY > topPos+22 && mouseY < topPos+22+16) {
                 graphics.renderTooltip(this.font,
                         List.of(
-                                Component.translatable("jei.complicated_bees.modifier", recipe.getTempChange().getTranslationKey()),
-                                Component.translatable("jei.complicated_bees.consumption_chance", String.format("%.0f%%", recipe.getUseChance() * 100))
+                                Component.translatable("jei.complicated_bees.modifier", recipe.value().tempChange().getTranslationKey()),
+                                Component.translatable("jei.complicated_bees.consumption_chance", String.format("%.0f%%", recipe.value().useChance() * 100))
                         ),
                         Optional.empty(),
                         mouseX,
